# mcp-factory

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: test.yml
artifacts/: discovery-output.json
docs/: TROUBLESHOOTING.md  architecture.md  compliance.md  copilot-log.md  copilot-spaces.md  cost.md  lab-notes.md  mac-compatibility.md  product-flow.md  project_description.md  references.md  sections-2-3.md  security.md
docs/adr/: 0001-initial-scope.md  0002-modular-analyzer-architecture.md  0003-frictionless-ux-confidence-analysis.md  0003-modular-analyzer-architecture.md  0004-json-output-production-validation.md  0005-hybrid-analysis-and-artifact-hygiene.md  0006-spec-gap-closure-legacy-protocol-analyzers.md  0007-directory-scan-installed-instance-target.md
docs/copilot-log/: entries.md
docs/meeting-notes/: template-meeting-notes.md
docs/schemas/: README.md  discovery-output.schema.json  inventory.schema.json  selection.schema.json  v1.0.json
examplejson/: shell32_com_objects_mcp.json  shell32_exports_mcp.json
scripts/: analyze_json_anomalies.py  comprehensive_validation_safe.ps1  demo_all_capabilities.py  demo_capabilities.py  demo_legacy_protocols.py  demo_script_capabilities.py  generate_artifacts_4tier.py  run_batch_validation.ps1  run_fixtures.ps1  setup-dev.ps1  show_artifacts.py  smoke_test.ps1  test_analyzers.py  validate_features.py
tests/: test_fixtures.py
(+54 files in other folders)
