[project]
name = "mcp-factory"
version = "0.1.0"
description = "Automated generation of Model Context Protocol servers from Windows binaries"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Evan King", email = "evanking@usf.edu"}
]

[project.urls]
Homepage = "https://github.com/evanking12/mcp-factory"
Repository = "https://github.com/evanking12/mcp-factory.git"
Issues = "https://github.com/evanking12/mcp-factory/issues"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py38"
line-length = 120
